Inclusão de método put de usuário