@@ -6,10 +6,12 @@ import com.javamauta.usuario.business.dto.UsuarioDTO;
 import com.javamauta.usuario.infrastructure.entity.Endereco;
 import com.javamauta.usuario.infrastructure.entity.Telefone;
 import com.javamauta.usuario.infrastructure.entity.Usuario;
+import io.jsonwebtoken.lang.Collections;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class UsuarioConverter {
@@ -19,18 +21,23 @@ public class UsuarioConverter {
                 .nome(usuarioDTO.getNome())
                 .email(usuarioDTO.getEmail())
                 .senha(usuarioDTO.getSenha())
-                .endereco(paraListaEndereco(usuarioDTO.getEnderecos()))
-                .telefone(paraListaTelefones(usuarioDTO.getTelefones()))
+                .enderecos(paraListaEndereco(usuarioDTO.getEnderecos()))
+                .telefones(paraListaTelefones(usuarioDTO.getTelefones()))
                 .build();
     }
 
-    public List<Endereco> paraListaEndereco(List<EnderecoDTO> enderecoDTOS){
+    public List<Endereco> paraListaEndereco(List<EnderecoDTO> enderecoDTOS) {
+        if (enderecoDTOS == null || enderecoDTOS.isEmpty()) {
+            return Collections.emptyList();
+        }
+
         List<Endereco> enderecos = new ArrayList<>();
-        for (EnderecoDTO enderecoDTO : enderecoDTOS){
+        for (EnderecoDTO enderecoDTO : enderecoDTOS) {
             enderecos.add(paraEndereco(enderecoDTO));
         }
         return enderecos;
     }
+
 
     public Endereco paraEndereco(EnderecoDTO enderecoDTO){
         return Endereco.builder()
@@ -43,9 +50,16 @@ public class UsuarioConverter {
                 .build();
     }
 
-    public List<Telefone> paraListaTelefones(List<TelefoneDTO> telefoneDTOS){
-        return telefoneDTOS.stream().map(this::paraTelefone).toList();
+    public List<Telefone> paraListaTelefones(List<TelefoneDTO> telefoneDTOS) {
+        if (telefoneDTOS == null || telefoneDTOS.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        return telefoneDTOS.stream()
+                .map(this::paraTelefone)
+                .collect(Collectors.toList());
     }
+
 
     public Telefone paraTelefone(TelefoneDTO telefoneDTO){
         return Telefone.builder()
@@ -59,14 +73,14 @@ public class UsuarioConverter {
                 .nome(usuarioDTO.getNome())
                 .email(usuarioDTO.getEmail())
                 .senha(usuarioDTO.getSenha())
-                .enderecos(paraListaEnderecoDTO(usuarioDTO.getEndereco()))
-                .telefones(paraListaTelefonesDTO(usuarioDTO.getTelefone()))
+                .enderecos(paraListaEnderecoDTO(usuarioDTO.getEnderecos()))
+                .telefones(paraListaTelefonesDTO(usuarioDTO.getTelefones()))
                 .build();
     }
 
     public List<EnderecoDTO> paraListaEnderecoDTO(List<Endereco> enderecoDTOS){
-        List<EnderecoDTO> enderecos = new ArrayList<>(); //return enderecoDTOS.stream().map(this::paraEndereco).toList();
-        for (Endereco enderecoDTO : enderecoDTOS){
+        List<EnderecoDTO> enderecos = new ArrayList<>();
+        for(Endereco enderecoDTO : enderecoDTOS){
             enderecos.add(paraEnderecoDTO(enderecoDTO));
         }
         return enderecos;
@@ -84,7 +98,7 @@ public class UsuarioConverter {
     }
 
     public List<TelefoneDTO> paraListaTelefonesDTO(List<Telefone> telefoneDTOS){
-        return telefoneDTOS.stream().map(this :: paraTelefoneDTO).toList();
+        return telefoneDTOS.stream().map(this::paraTelefoneDTO).toList();
     }
 
     public TelefoneDTO paraTelefoneDTO(Telefone telefoneDTO){
@@ -94,4 +108,14 @@ public class UsuarioConverter {
                 .build();
     }
 
+    public Usuario updateUsuario(UsuarioDTO usuarioDTO, Usuario entity){
+        return Usuario.builder()
+                .nome(usuarioDTO.getNome() != null ?  usuarioDTO.getNome() : entity.getNome())
+                .id(entity.getId())
+                .senha(usuarioDTO.getSenha() != null ? usuarioDTO.getSenha() : entity.getSenha())
+                .email(usuarioDTO.getEmail() != null ? usuarioDTO.getEmail() : entity.getEmail())
+                .enderecos(entity.getEnderecos())
+                .telefones(entity.getTelefones())
+                .build();
+    }
 }
